--- a/pyspread.html
+++ b/pyspread.html
@@ -8,7 +8,7 @@
 <td valign=bottom>&nbsp;<br>
 <font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>pyspread</strong></big></big></font></td
 ><td align=right valign=bottom
-><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/home/dust/Desktop/Coding/CSUA_Hackathon_Spring_2016/pyspread.py">/home/dust/Desktop/Coding/CSUA_Hackathon_Spring_2016/pyspread.py</a></font></td></tr></table>
+><font color="#ffffff" face="helvetica, arial"></font></td></tr></table>
     <p></p>
 <p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
